container overflow fix

--- a/client/src/components/weatherCard/weatherCard.css
+++ b/client/src/components/weatherCard/weatherCard.css
@@ -13,7 +13,7 @@
 }
 .container {
   max-width: 60vw;
-  height: 70vh;
+  height: 60vh;
   margin: auto;
   margin-top: 0;
   /* padding: 0 1rem; */
