--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,6 @@
     font-size: 1.6rem;
   }
   
-  h1 {
-    font-size: 6rem;
+  h2 {
+    font-size: 4rem;
   }
